Fix a crash in QGtkStyle when theme not available

subElementRect failed to verify that the theme was
resolved before accessing certain data structures.

Reviewed-by: ogoffart
Task-number: QTBUG-9240